engine/wrapper/resources/styles/assets.cp.styles.css
/* Bootstrap scroll fix */
body.cp {
	padding-right: 0px !important;
}

/* Bootstrap modal CP padding fix */
.cp .navbar {
	padding: .5rem 1rem !important;
}

/* Bootstrap dropdown hover fix */
.dropdown-item:focus, .dropdown-item:hover {
	background-color: #f1f1f1;
}

.dropdown-item.active, .dropdown-item:active {
	background-color: #007bff;
}

/* Login/MySQL form */
body.cp-login,
body.cp-mysql,
body.cp-first-user {
	height: 100%;
	display: -ms-flexbox;
	display: -webkit-box;
	display: flex;
	-ms-flex-align: center;
	-ms-flex-pack: center;
	-webkit-box-align: center;
	align-items: center;
	-webkit-box-pack: center;
	justify-content: center;
	padding-top: 40px;
	padding-bottom: 40px;
	background-color: #f5f5f5;
}

.cp-login .form-signin,
.cp-mysql .form-signin,
.cp-first-user .form-signin {
	width: 100%;
	max-width: 330px;
	padding: 15px;
	margin: 0 auto;
}

.cp-login .form-signin label,
.cp-mysql .form-signin label,
.cp-first-user .form-signin label {
	cursor: pointer;
}

.cp-login .form-signin .form-control,
.cp-mysql .form-signin .form-control,
.cp-first-user .form-signin .form-control {
	position: relative;
	box-sizing: border-box;
	height: auto;
	padding: 10px;
	font-size: 16px;
}

.cp-login .form-signin .form-control:focus,
.cp-mysql .form-signin .form-control:focus,
.cp-first-user .form-signin .form-control:focus {
	z-index: 2;
}

.cp-login .form-signin input[type="email"] {
	margin-bottom: -1px;
	border-bottom-right-radius: 0;
	border-bottom-left-radius: 0;
}

.cp-login .form-signin input[type="password"] {
	margin-bottom: 10px;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

/* Control panel skeleton */
body.cp {
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	background: initial;
	background-color: #fff;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.5;
	color: #212529;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

body.cp nav.main {
	height: 56px;
	box-shadow: 0 0 5px 4px rgba(0,0,0,0.25);
}

body.cp nav.main.bg-dark {
	background: #205081 url(/assets/sys/bg.png) repeat 0 0!important;
}

body.cp nav.main a.navbar-brand {
	font-weight: bold;
}

body.cp nav.main .navbar-nav .nav-item a img {
	width: 35px;
	width: 35px;
	margin-right: 10px;
	margin-top: -30px;
	margin-bottom: -30px;
}

body.cp .wrap {
	width: 100%;
	height: 100%;
	display: table;
	align-items: stretch;
}

body.cp .wrap .sidebar,
body.cp .wrap .content {
	display: table-cell;
	position: relative;
	padding-top: 56px;
	vertical-align: top;
}

body.cp .wrap .sidebar {
	display: none;
}

body.cp.cp-sidebar-left .wrap .sidebar.sidebar-left {
	display: table-cell;
}

body.cp.cp-sidebar-right .wrap .sidebar.sidebar-right {
	display: table-cell;
}

body.cp .wrap .sidebar-right .padd,
body.cp .wrap .content .padd {
	padding: 1rem 1rem;
}

body.cp .wrap .scroll {
	height: 100%;
	overflow: hidden;
	overflow-y: auto;
}

body.cp .wrap .sidebar {
	width: 245px;
	background: #eee;
	box-shadow: 0 0.5em 0.5em rgba(0,0,0,.3);
}

body.cp .wrap .sidebar.sidebar-left ul.nav {
	padding: 1rem 0px;
}

body.cp .wrap .sidebar.sidebar-left ul.nav li.nav-item a {
	color: #444;
}

body.cp .wrap .sidebar.sidebar-left ul.nav li.nav-item.active {
	background-color: #417cb9;
}

body.cp .wrap .sidebar.sidebar-left ul.nav li.nav-item.active a {
	color: #fff;
}

body.cp .wrap .sidebar.sidebar-left ul.nav li.nav-item:hover {
	background-color: #e7e7e7;
}

body.cp .wrap .sidebar.sidebar-left ul.nav li.nav-item.active:hover {
	background-color: #417cb9;
}

body.cp .wrap .sidebar.sidebar-left ul.nav ul.nav {
	background: #eee;
	padding-top: 0px;
}

body.cp .wrap .sidebar.sidebar-left ul.nav ul.nav li.nav-item a {
	color: #444;
	padding-left: 2rem;
}

body.cp .wrap .sidebar.sidebar-left ul.nav ul.nav li.nav-item.active {
	background-color: #e7e7e7;
}

body.cp .wrap .sidebar.sidebar-left ul.nav ul.nav li.nav-item.active a {
	color: #417cb9;
}

